[package]
name = "core"
version = "0.4.0"
authors = ["Nathaniel Cook <nathaniel@influxdata.com>"]
edition = "2018"

[lib]
name = "core"
crate-type = ["rlib"]

[features]
default = ["strict"]

strict = []

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
serde-aux = "0.6.1"
wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
maplit = "1.0.2"
flatbuffers = "0.6.1"
derivative = "2.1.1"
walkdir = "2.2.9"
tabwriter = "1.2.1"

[dev-dependencies]
colored = "1.8"
pretty_assertions = "0.6.1"
criterion = "0.3.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.49.0"

[[bench]]
name = "bench_scanner"
path = "scanner/benchmarks.rs"
harness = false
