[package]
name = "flux-core"
version = "0.154.0"
authors = ["Flux Team <flux-developers@influxdata.com>"]
edition = "2021"

[lib]
name = "fluxcore"
crate-type = ["rlib"]

[[bin]]
name = "fluxdoc"
test = false
bench = false
required-features = ["doc"]

[[bin]]
name = "fluxc"
test = false
bench = false

[features]
default = ["strict"]
strict = []
lsp = ["lsp-types"]
doc = ["rayon", "pulldown-cmark", "once_cell", "csv", "pad", "tempfile"]

[dependencies]
anyhow = "1.0.56"
ena = "0.14"
env_logger = "0.9"
thiserror = "1"
codespan-reporting = "0.11"
fnv = "1.0.7"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display"
] }
pretty = "0.11.2"
rayon = { version = "1", optional = true }
serde = { version = "^1.0.136", features = ["rc"] }
serde_derive = "^1.0.136"
serde_json = "1.0.79"
serde-aux = "3.0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5.5"
maplit = "1.0.2"
flatbuffers = "2.1.1"
derivative = "2.1.1"
walkdir = "2.2.9"
log = "0.4.16"
lsp-types = { version = "0.92", optional = true }
pulldown-cmark = { version = "0.9.0", default-features = false, optional = true }
structopt = "0.3.26"
libflate = "1.2.0"
once_cell = { version = "1.10.0", optional = true }
csv = { version = "1.1", optional = true }
pad = { version = "0.1.6", optional = true }
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
env_logger = "0.9"
colored = "2.0"
pretty_assertions = "1.2.1"
criterion = "0.3.3"
expect-test = "1.2.2"

[[bench]]
name = "scanner"
harness = false
