[package]
name = "flux-core"
version = "0.154.0"
authors = ["Flux Team <flux-developers@influxdata.com>"]
edition = "2021"

[lib]
name = "fluxcore"
crate-type = ["rlib"]

[[bin]]
name = "analyze_query_log"
test = false
bench = false
required-features = ["crossbeam-channel", "csv", "rayon", "rusqlite", "pretty_assertions"]

[[bin]]
name = "fluxdoc"
test = false
bench = false
required-features = ["doc"]

[[bin]]
name = "fluxc"
test = false
bench = false

[features]
default = ["strict"]
strict = []
lsp = ["lsp-types"]
doc = ["csv", "once_cell", "pad", "pulldown-cmark", "rayon", "tempfile"]

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4", features = ["serde"] }
codespan-reporting = "0.11"
crossbeam-channel = { version = "0.5", optional = true }
csv = { version = "1.1", optional = true }
derivative = "2.1.1"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from"
] }
ena = "0.14"
env_logger = "0.9"
flatbuffers = "2.1.1"
fnv = "1.0.7"
indexmap = "1"
libflate = "1.2.0"
log = "0.4.16"
lsp-types = { version = ">=0.91,<=0.92", optional = true }
maplit = "1.0.2"
once_cell = { version = "1.10.0", optional = true }
pad = { version = "0.1.6", optional = true }
pulldown-cmark = { version = "0.9.0", default-features = false, optional = true }
pretty = "0.11.2"
rayon = { version = "1.5.2", optional = true }
regex = "1.5.5"
serde = { version = "^1.0.136", features = ["derive", "rc"] }
serde-aux = "3.0.1"
serde_derive = "^1.0.136"
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1"
tempfile = { version = "3.3.0", optional = true }
walkdir = "2.2.9"

rusqlite = { version = "0.26", optional = true }
pretty_assertions = { version = "1", optional = true }

[dev-dependencies]
colored = "2.0"
criterion = "0.3.3"
env_logger = "0.9"
expect-test = "1.2.2"
pretty_assertions = "1.2.1"

[[bench]]
name = "scanner"
harness = false
