[package]
name = "flux"
version = "0.154.0"
authors = ["Flux Team <flux-developers@influxdata.com>"]
edition = "2021"

[lib]
name = "flux"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["strict"]
strict = []
lsp = ["flux-core/lsp"]

[dependencies]
anyhow ="1"
flux-core = { path = "../flux-core" }
flatbuffers = "2.0.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
serde-aux = "0.6.1"
thiserror = "1"
once_cell = "1"

# `getrandom` is a dependency of the `tera` crate, which does not support
# the wasm32-unknown-unknown target by default. Explicitly importing it here
# allows us to enable that support with the "js" feature.
# For details, see 'https://docs.rs/getrandom/0.2.3/getrandom/#webassembly-support'
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
criterion = "0.3.3"
expect-test = "1"
maplit = "1.0.2"
pretty_assertions = "1"

[build-dependencies]
flux-core = { path = "../flux-core" }
serde_json = "1.0"
flatbuffers = "2.0.0"
anyhow ="1"
walkdir = "2"

[[bench]]
name = "builtins"
harness = false

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "formatter"
harness = false
