[package]
name = "fluxdoc"
version = "0.1.0"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["strict"]
strict = []

[dependencies]
flux = { path = "../flux" }
structopt = "0.3.13"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
tera = "1"
lazy_static = "1.4.0"
comrak = "0.10.1"

