[package]
name = "ffi_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "caller"

[[bin]]
name = "repl"
path = "src/main.rs"

[dependencies]
rustyline = "9.1.2"
base64 = "0.13.0"
tower-lsp = "0.17.0"
lsp-types = "0.93.0"
serde_json = "1.0"
scoped_threadpool = "0.1.9"
rustyline-derive = "0.6.0"
unicode-width = "0.1.9"
regex = "1"