[package]
name = "flux-parser"
version = "0.3.0"
authors = ["Nathaniel Cook <nathaniel@influxdata.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
scanner = {path = "../scanner" }
ast = {path = "../ast" }

[dev-dependencies]
pretty_assertions = "0.6.1"

# https://rustwasm.github.io/docs/book/reference/code-size.html#optimizing-builds-for-code-size
[profile.release]
lto = true
opt-level = 'z'
