[package]
name = "flux"
version = "0.1.0"
authors = ["jlapacik <joshua.lapacik@pacbell.net>"]
edition = "2018"

[lib]
name = "flux"
path = "lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
core = { path = "../core" }
flatbuffers = "0.6.0"

[dev-dependencies]
maplit = "1.0.2"

[build-dependencies]
core = { path = "../core" }
flatbuffers = "0.6.0"
