[package]
name = "flux"
version = "0.5.1"
authors = ["jlapacik <joshua.lapacik@pacbell.net>"]
edition = "2018"

[lib]
name = "flux"
path = "lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
core = { path = "../core" }
flatbuffers = "0.6.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
serde-aux = "0.6.1"

[dev-dependencies]
maplit = "1.0.2"
criterion = "0.3.0"

[build-dependencies]
core = { path = "../core" }
flatbuffers = "0.6.0"

[[bench]]
name = "builtins"
harness = false
